# service-template

./: .gitignore  README.md  cookiecutter.json
hooks/: pre_gen_project.py
tests/: test_template_structure.py
{{cookiecutter.service_slug}}/: Dockerfile  Makefile  README.md  pyproject.toml
{{cookiecutter.service_slug}}/.github/workflows/: ci.yml  deploy-image.yml
{{cookiecutter.service_slug}}/deploy/: values.yaml
{{cookiecutter.service_slug}}/k8s/: deployment.yaml  service.yaml
{{cookiecutter.service_slug}}/src/{{cookiecutter.python_package}}/: __init__.py  main.py
{{cookiecutter.service_slug}}/tests/: test_app.py
